Finished subsection 03 of MINE project

--- a/app/index.html
+++ b/app/index.html
@@ -156,7 +156,7 @@
                             keyword results. user presentation.</p>                        
                         <img src="./assets/images/hero_02.jpg" alt="project research" class="project__img--half">
                     </div>
-                    <div class="col--m-6 project__col--flip-order">
+                    <div class="col--m-6 project__col--flip-child-order">
                         <p class="p--desc p--desc--mb p--desc--mt project__img--desc">We went through 3 iterations to decide what kind of product to develop. This process
                             included</p>
                         <img src="./assets/images/hero_03.jpg" alt="project research" class="project__img--half">
@@ -196,6 +196,72 @@
                                 O2O service Health detecting Mobile device
                             </p>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <!-- (3) user research-->
+            <section class="section section__container--full">
+                <div class="row row--gutters project__col--flip-order">
+                    <div class="col--m-6">
+                        <figure>
+                            <div class="illust-two-circles">
+                                <div class="illust-two-circles__left clip-circle">
+                                </div>
+                                <div class="illust-two-circles__right">
+                                    <img src="./assets/images/icons/icon-phone.png" class="icon-phone" alt="phone icon">
+                                </div>
+                            </div>
+                            <figcaption class="illust-two-circles__desc">
+                                <p class="p--desc--mb--small"><strong>Core target</strong> | 20-50 people who wants to keep a track of stress level and are interested in relaxing methods.</p>
+                                <p><strong>Sub target</strong> | 20-50 people who wants to keep a track of stress level and are interested in relaxing methods.</p>
+                            </figcaption>
+                        </figure> 
+                    </div>
+                    <div class="col--m-6 project__col--flip-order--first">
+                        <header class="row">
+                            <span class="project__subtitle project__subtitle--number">03</span>
+                            <h2 class="project__subtitle">Understanding Users</h2>
+                        </header>
+                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
+                            kind of product to develop. This process
+                            included</p>
+                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
+                            kind of product to develop. This process We went through 3 iterations to decide what
+                            kind of product to develop. This process included</p>
+                    </div>
+                </div>
+            </section>  
+            <!-- (4) user research-->
+            <section class="section section__container--full">
+                <div class="row row--gutters project__col--flip-order">
+                    <div class="col--m-6">
+                        <figure>
+                            <div class="illust-two-circles">
+                                <div class="illust-two-circles__left clip-circle">
+                                </div>
+                                <div class="illust-two-circles__right">
+                                    <img src="./assets/images/icons/icon-phone.png" class="icon-phone" alt="phone icon">
+                                </div>
+                            </div>
+                            <figcaption class="illust-two-circles__desc">
+                                <p class="p--desc--mb--small"><strong>Core target</strong> | 20-50 people who wants to keep a track
+                                    of stress level and are interested in relaxing methods.</p>
+                                <p><strong>Sub target</strong> | 20-50 people who wants to keep a track of stress level and are
+                                    interested in relaxing methods.</p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col--m-6 project__col--flip-order--first">
+                        <header class="row">
+                            <span class="project__subtitle project__subtitle--number">03</span>
+                            <h2 class="project__subtitle">Understanding Users</h2>
+                        </header>
+                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
+                            kind of product to develop. This process
+                            included</p>
+                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
+                            kind of product to develop. This process We went through 3 iterations to decide what
+                            kind of product to develop. This process included</p>
                     </div>
                 </div>
             </section>
