Finished structure of visual strategy section

--- a/app/index.html
+++ b/app/index.html
@@ -231,30 +231,72 @@
                     </div>
                 </div>
             </section>  
-            <!-- (4) user research-->
+            <!-- (4) MVP features-->
+            <section class="section section__container--full">
+                <header class="row project__subtitle--ac">
+                    <span class="project__subtitle project__subtitle--number">04</span>
+                    <h2 class="project__subtitle">User tasks and MVP feature set</h2>
+                </header>
+                <div class="container--centered-desc">
+                    <p class="p--desc p--desc--mb">We wanted users to feel cared and empowered so that they can think emotions are something to be taken care of, not
+                    negative things to avoid or hide inside.</p>
+                </div>
+                <div class="row row--gutters">
+                    <ul class="col-2-by-2">
+                        <li class="numberbox">
+                            <div class="numberbox__number">1</div>
+                            <div class="numberbox__content">
+                                <h3 class="numberbox__heading">
+                                    Stress checker
+                                </h3>
+                                <p class="numberbox__desc">
+                                    Check their stress level regularly.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="numberbox">
+                            <div class="numberbox__number">2</div>
+                            <div class="numberbox__content">
+                                <h3 class="numberbox__heading">
+                                    Stress checker
+                                </h3>
+                                <p class="numberbox__desc">
+                                    Check their stress level regularly.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="numberbox">
+                            <div class="numberbox__number">3</div>
+                            <div class="numberbox__content">
+                                <h3 class="numberbox__heading">
+                                    Stress checker
+                                </h3>
+                                <p class="numberbox__desc">
+                                    Check their stress level regularly.
+                                </p>
+                            </div>
+                        </li>                    
+                        <li class="numberbox">
+                            <div class="numberbox__number">4</div>
+                            <div class="numberbox__content">
+                                <h3 class="numberbox__heading">
+                                    Stress checker
+                                </h3>
+                                <p class="numberbox__desc">
+                                    Check their stress level regularly.
+                                </p>
+                            </div>
+                        </li>
+                    </ul> 
+                </div>
+            </section>
+            <!-- (5) User Flow-->
             <section class="section section__container--full">
                 <div class="row row--gutters project__col--flip-order">
                     <div class="col--m-6">
-                        <figure>
-                            <div class="illust-two-circles">
-                                <div class="illust-two-circles__left clip-circle">
-                                </div>
-                                <div class="illust-two-circles__right">
-                                    <img src="./assets/images/icons/icon-phone.png" class="icon-phone" alt="phone icon">
-                                </div>
-                            </div>
-                            <figcaption class="illust-two-circles__desc">
-                                <p class="p--desc--mb--small"><strong>Core target</strong> | 20-50 people who wants to keep a track
-                                    of stress level and are interested in relaxing methods.</p>
-                                <p><strong>Sub target</strong> | 20-50 people who wants to keep a track of stress level and are
-                                    interested in relaxing methods.</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="col--m-6 project__col--flip-order--first">
                         <header class="row">
-                            <span class="project__subtitle project__subtitle--number">03</span>
-                            <h2 class="project__subtitle">Understanding Users</h2>
+                            <span class="project__subtitle project__subtitle--number">05</span>
+                            <h2 class="project__subtitle">User Flow Chart</h2>
                         </header>
                         <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
                             kind of product to develop. This process
@@ -262,6 +304,56 @@
                         <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
                             kind of product to develop. This process We went through 3 iterations to decide what
                             kind of product to develop. This process included</p>
+                    </div>
+                    <div class="col--m-6">
+                        <div class="project__flow-chart">
+                            <a href="./assets/images/flowchart.jpg">
+                                <figure>
+                                    <img src="./assets/images/flowchart.jpg" alt="flow chart">
+                                </figure>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- (6) Visual Strategy-->
+            <section class="section section__container--full">
+                <header class="row project__subtitle--ac">
+                    <span class="project__subtitle project__subtitle--number">06</span>
+                    <h2 class="project__subtitle">Visual Strategy</h2>
+                </header>
+                <div class="row row--gutters project__boxes">
+                    <div class="col--m-4">
+                        <div class="border--light project__box-container">
+                            <h3 class="project__box-title p--desc mb-20">Natural Concept</h3>
+                            <p class="project__box-desc p--desc--small">
+                                AI and chatbot possible ed service Loced service Location based ation based personalized service Location based service
+                            </p>
+                            <figure class="project__box-img project__box-img--1">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="col--m-4">
+                        <div class="border--light project__box-container">
+                            <h3 class="project__box-title p--desc mb-20">Lovely Illustrations</h3>
+                            <p class="project__box-desc p--desc--small">
+                                AI and chatbot possible personalized service Location based Service and
+                                O2O service Health detecting Mobile device
+                            </p>
+                            <figure class="project__box-img project__box-img--2">
+                            </figure>                       
+                        </div>
+                    </div>
+                    <div class="col--m-4">
+                        <div class="border--light project__box-container">
+                            <h3 class="project__box-title p--desc mb-20">Analog Sense</h3>
+                            <p class="project__box-desc p--desc--small">
+                                AI and chatbot possible personalized service Location based Service and
+                                O2O service Health detecting Mobile device
+                            </p>
+                            <figure class="project__box-img project__box-img--3">
+                            </figure>                        
+                        </div>
                     </div>
                 </div>
             </section>
