--- a/app/index.html
+++ b/app/index.html
@@ -366,37 +366,37 @@
                         <h2 class="project__subtitle">UI components</h2>
                     </div>
                 </header>
-                <div class="row row--gutters">
-                    <div class="col--s-6">
+                <div class="row row--gutters move-upwards">
+                    <div class="col--m-6">
                         <div class="slider-image">
                             <div class="item-i">
                                 <div class="img-wrapper">
-                                    <img src="https://images.unsplash.com/photo-1551721434-8b94ddff0e6d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1001&q=80"
+                                    <img src="./assets/images/main_01.jpg"
                                         class="img" alt="">
                                 </div>
                             </div>
                             <div class="item-i">
                                 <div class="img-wrapper">
-                                    <img src="https://images.unsplash.com/photo-1551721434-8b94ddff0e6d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1001&q=80"
+                                    <img src="./assets/images/main_01.jpg"
                                         class="img" alt="">
                                 </div>
                         
                             </div>
                             <div class="item-i">
                                 <div class="img-wrapper">
-                                    <img src="https://images.unsplash.com/photo-1551721434-8b94ddff0e6d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1001&q=80"
+                                    <img src="./assets/images/main_01.jpg"
                                         class="img" alt="">
                                 </div>
                             </div>
                             <div class="item-i">
                                 <div class="img-wrapper">
-                                    <img src="https://images.unsplash.com/photo-1551721434-8b94ddff0e6d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1001&q=80"
+                                    <img src="./assets/images/main_01.jpg"
                                         class="img" alt="">
                                 </div>
                             </div>                        
                         </div>
                     </div>
-                    <div class="col--s-6">
+                    <div class="col--m-6">
                         <div class="pagingInfo"></div>
                         <div class="slider-content">
                             <!-- Below three divs get wrapped under 4 parents
