Completed DoubleSlider section

--- a/app/index.html
+++ b/app/index.html
@@ -414,6 +414,11 @@
                                         stressful
                                         environment in modern Korean society.
                                     </p>
+                                    <p class="p--desc">
+                                        Third is a fictious mobile application designed to enhance mindfulness of people who are exposed to the
+                                        stressful
+                                        environment in modern Korean society.
+                                    </p>
                                 </div>
                             </div>
                             <div>
@@ -422,6 +427,11 @@
                                     <p class="p--desc">
                                         Second is a fictious mobile application designed to enhance mindfulness of people who are exposed to
                                         the stressful
+                                        environment in modern Korean society.
+                                    </p>
+                                    <p class="p--desc">
+                                        Third is a fictious mobile application designed to enhance mindfulness of people who are exposed to the
+                                        stressful
                                         environment in modern Korean society.
                                     </p>
                                 </div>
@@ -434,11 +444,21 @@
                                         stressful
                                         environment in modern Korean society.
                                     </p>
+                                    <p class="p--desc">
+                                        Third is a fictious mobile application designed to enhance mindfulness of people who are exposed to the
+                                        stressful
+                                        environment in modern Korean society.
+                                    </p>                                    
                                 </div>
                             </div>
                             <div>
                                 <div class="item-c">
                                     <h3 class="heading__accent">Healing Bot</h3>
+                                    <p class="p--desc">
+                                        Third is a fictious mobile application designed to enhance mindfulness of people who are exposed to the
+                                        stressful
+                                        environment in modern Korean society.
+                                    </p>
                                     <p class="p--desc">
                                         Third is a fictious mobile application designed to enhance mindfulness of people who are exposed to the
                                         stressful
