Working on design work internal nav(structure done)

--- a/app/index.html
+++ b/app/index.html
@@ -465,58 +465,93 @@
                                         environment in modern Korean society.
                                     </p>
                                 </div>
-                            </div>                        </div>
+                            </div>                        
+                        </div>
+                        <!-- End of 'slider-content' -->
                     </div>
                 </div>
             </section>
-
         </section>
-        <!-- [c] Ending Starts -->
-        <section id="project-reflection" class="project-section section">
-            <div class="section__container">
-                <header class="section__header">
-                    <h2 class="section__heading">Learning from Professionals.</h2>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting
-                        can
-                        explore endless ways to connect with consumers.
-                    </div>
+        <!-- Full image -->
+        <section class="project-section project-section--full-image">
+        </section>
+        <!-- Reflection-->
+        <section class="section section__container--full">
+            <header class="row project__subtitle--ac">
+                <h2 class="project__subtitle">Learning from Feedback</h2>
+            </header>
+            <div class="container--centered-desc--narrow">
+                <p class="p--desc p--desc--mb">
+                    We wanted users to feel cared and empowered so that they can think emotions are
+                    something to be taken care of, are of, not negative things to avoid not negative things to avoid or hide inside.
+                </p>
+                <p class="p--desc p--desc--mb">
+                    We wanted users to feel cared and empowered so that they can think emotions are
+                    something to be taken care of, are of, not neg , are of, not negative things to avoid not
+                    negative things to avoid or hide inside.
+                </p>
+                <p class="p--desc p--desc--mb">
+                    We wanted users to feel cared and empowered so that they can think emotions are
+                    something to be taken care of, are of, not negative things to avoid not negative things to avoid or hide inside.
+                </p>
+            </div>
+        </section>
+        <!-- Promotion -->
+        <section>
+            <div class="section__container--full project-section--full-color">
+            </div>
+        </section>
+        <!-- Nav to other works -->
+        <section class="project-section">
+            <div class="section__container--full mt-none">
+                <header class="row">
+                    <h2 class="project__subtitle">Explore other works</h2>
                 </header>
-                <div class="section__side section__side--right-padding">
-                    <div class="section__side-container">
-                        <div class="cards">
-                            <a href="#" class="cards__card card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">MOBILE APP</p>
-                                    <h3 class="card__title">How to improve people's mindfulness?</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">WEBSITE</p>
-                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card card card__last">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">WEBSITE</p>
-                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
-                                </div>
-                            </a>
+                <ul class="nav-list__container">
+                    <li class="row row__border row__mtb">
+                        <div class="project__meta col--m-4">
+                            <h3 class="h--small">Agency</h3>
                         </div>
-                    </div>
-                </div>
+                        <div class="col--m-8 col--mt-until-medium">
+                            <ul class="nav-list">
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Mobile Realty 'SoL'</h4></a></li>
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Various Design Support</h4></a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="row row__border row__mtb">
+                        <div class="project__meta col--m-4">
+                            <h3 class="h--small">Academy</h3>
+                        </div>
+                        <div class="col--m-8 col--mt-until-medium">
+                            <ul class="nav-list">
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"> <div class="nav-list__thum"></div> <h4 class="nav-list__title">Ma-in</h4></a></li>
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"> <div class="nav-list__thum nav-list__active"></div> <h4 class="nav-list__title">Portfolio ver.1</h4></a></li>
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"> <div class="nav-list__thum"></div> <h4 class="nav-list__title">YG site redesign</h4></a></li>
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"> <div class="nav-list__thum"></div> <h4 class="nav-list__title">Welcome to Ganghwa</h4></a></li>
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"> <div class="nav-list__thum"></div> <h4 class="nav-list__title">Winter Festival</h4></a></li>
+                                <li class="nav-list__item">
+                                    <a href="#" class="nav-list__link">
+                                        <div class="nav-list__thum"></div>
+                                        <h4 class="nav-list__title">Various design exercises</h4>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="row row__mtb">
+                        <div class="project__meta col--m-4">
+                            <h3 class="h--small">Freelancing</h3>
+                        </div>
+                        <div class="col--m-8 col--mt-until-medium">
+                            <ul class="nav-list">
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Komerican3</h4></a></li>
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Dessert 129</h4></a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
