Finished styyling internal nav

--- a/app/index.html
+++ b/app/index.html
@@ -514,7 +514,7 @@
                         </div>
                         <div class="col--m-8 col--mt-until-medium">
                             <ul class="nav-list">
-                                <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Mobile Realty 'SoL'</h4></a></li>
+                                <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Shinhan 'SoL'</h4></a></li>
                                 <li class="nav-list__item"><a href="#" class="nav-list__link"><div class="nav-list__thum"></div><h4 class="nav-list__title">Design Support</h4></a></li>
                             </ul>
                         </div>
