Fixed layout of Visual strategy section

--- a/app/index.html
+++ b/app/index.html
@@ -325,32 +325,39 @@
                 <div class="row row--gutters project__boxes">
                     <div class="col--m-4">
                         <div class="border--light project__box-container">
-                            <h3 class="project__box-title p--desc mb-20">Natural Concept</h3>
-                            <p class="project__box-desc p--desc--small">
-                                AI and chatbot possible ed service Loced service Location based ation based personalized service Location based service
-                            </p>
+                            <div class="project__box-info">
+                                <h3 class="project__box-title p--desc mb-20">Natural Concept</h3>
+                                <p class="project__box-desc p--desc--small">
+                                    AI and chatbot possible ed service Loced service Location based ation based personalized service Location based
+                                    service
+                                </p>
+                            </div>
                             <figure class="project__box-img project__box-img--1">
                             </figure>
                         </div>
                     </div>
                     <div class="col--m-4">
                         <div class="border--light project__box-container">
-                            <h3 class="project__box-title p--desc mb-20">Lovely Illustrations</h3>
-                            <p class="project__box-desc p--desc--small">
-                                AI and chatbot possible personalized service Location based Service and
-                                O2O service Health detecting Mobile device
-                            </p>
+                            <div class="project__box-info">
+                                <h3 class="project__box-title p--desc mb-20">Lovely Illustrations</h3>
+                                <p class="project__box-desc p--desc--small">
+                                    AI and chatbot possible personalized service Location based Service and
+                                    O2O service Health detecting Mobile device
+                                </p>                                
+                            </div>
                             <figure class="project__box-img project__box-img--2">
                             </figure>                       
                         </div>
                     </div>
                     <div class="col--m-4">
                         <div class="border--light project__box-container">
-                            <h3 class="project__box-title p--desc mb-20">Analog Sense</h3>
-                            <p class="project__box-desc p--desc--small">
-                                AI and chatbot possible personalized service Location based Service and
-                                O2O service Health detecting Mobile device
-                            </p>
+                            <div class="project__box-info">
+                                <h3 class="project__box-title p--desc mb-20">Analog Sense</h3>
+                                <p class="project__box-desc p--desc--small">
+                                    AI and chatbot possible personalized service Location based Service and
+                                    O2O service Health detecting Mobile device
+                                </p>
+                            </div>
                             <figure class="project__box-img project__box-img--3">
                             </figure>                        
                         </div>
@@ -358,7 +365,7 @@
                 </div>
             </section>
             <!-- (7) UI details -->
-            <section class="section section__container--full">
+            <section class="section section__container--full mb-none">
                 <header class="row row--gutters">
                     <div class="col--m-6"></div>
                     <div class="col--m-6">
