Finished responsive primary nav styling

--- a/app/index.html
+++ b/app/index.html
@@ -28,13 +28,13 @@
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
                         <ul class="primary-nav__list">
-                            <li>
+                            <li class="primary-nav__item--darkbg">
                                 <a href="#">myself</a>
                             </li>
-                            <li>
+                            <li class="primary-nav__item--darkbg active">
                                 <a href="#">design</a>
                             </li>
-                            <li>
+                            <li class="primary-nav__item--darkbg">
                                 <a href="#">development</a>
                             </li>
                         </ul>
@@ -55,13 +55,13 @@
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
                         <ul class="primary-nav__list">
-                            <li>
+                            <li class="primary-nav__item">
                                 <a href="#">myself</a>
                             </li>
-                            <li>
+                            <li class="primary-nav__item active">
                                 <a href="#">design</a>
                             </li>
-                            <li>
+                            <li class="primary-nav__item">
                                 <a href="#">development</a>
                             </li>
                         </ul>
