Fixed responsive layout of project meta section

--- a/app/index.html
+++ b/app/index.html
@@ -92,21 +92,28 @@
         <!-- No secondary nav for each portfolio work -->
         <!-- [a] Intro Starts -->
         <section class="project-section section" >
-            <div class="section__container--full">
+            <div class="section__container--full mt-none">
                 <div class="row row__border row__mtb">
                     <div class="project__meta col--m-6">
                         <h2 class="project__title">MINE</h2>
-                        <dl>
-                            <dt>Industry</dt>
-                            <dd>health </dd>
-                            <dt>Made in</dt>
-                            <dd>Oct 2017</dd>
-                            <dt>Range of engagement</dt>
-                            <dd>Market Research (team)</dd>
-                            <dd>Content development (team)</dd>
-                            <dd>Wireframing</dd>
-                            <dd>Visual strategy</dd>
-                            <dd>UI design</dd>
+                        <dl class="project__meta-container">
+                            <div class="project__meta-item">
+                                <dt>Industry</dt>
+                                <dd>health </dd>
+                            </div>
+                            <div class="project__meta-item">
+                                <dt>Made in</dt>
+                                <dd>Oct 2017</dd>
+                            </div>
+                            <div class="project__meta-item">
+                                <dt>Range of engagement</dt>
+                                <dd>Market Research (team)</dd>
+                                <dd>Content development (team)</dd>
+                                <dd>Wireframing</dd>
+                                <dd>Visual strategy</dd>
+                                <dd>UI design</dd>
+                            </div>
+
                         </dl>
                     </div>
                     <div class="project__overview col--m-6 col--mt-until-medium">
