Added responsive logo emblem

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,9 @@
             <div class="site-header__content">
                 <div class="site-header__logo">
                     <div class="site-header__logo-text">wonmi</div>
+                    <div class="site-header__logo-emblem-container">
+                        <img src="./assets/images/icons/logo-emblem.svg" alt="logo emblem" class="logo-emblem">
+                    </div>
                 </div>
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
@@ -51,6 +54,9 @@
             <div class="site-header__content site-header__content--dynamic">
                 <div class="site-header__logo">
                     <div class="site-header__logo-text site-header__logo-text--black">wonmi</div>
+                    <div class="site-header__logo-emblem-container">
+                        <img src="./assets/images/icons/logo-emblem--bl.svg" alt="logo emblem" class="logo-emblem">
+                    </div>
                 </div>                
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
