Added header pagination

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,11 @@
                         <img src="./assets/images/icons/logo-emblem.svg" alt="logo emblem" class="logo-emblem">
                     </div>
                 </div>
+                <div class="site-header__pagination">
+                    <span>Part of
+                        <a href="#">Design</a>
+                    </span>
+                </div>
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
                         <ul class="primary-nav__list">
@@ -86,9 +91,9 @@
         <div class="hero">
             <h1 class="hero__heading">
                 <div class="container">
-                    <p class="hero__heading--intro">DESIGN</p>
-                    <p class="hero__heading--main">Focused on user experience</p>
-                    <p class="hero__heading--sub">Let me tell you my story.</p>
+                    <!-- <p class="hero__heading--intro">CASE STUDY</p> -->
+                    <p class="hero__heading--main">Your Mindfulness Manager</p>
+                    <p class="hero__heading--sub">Hypothetical Mobile Application</p>
                 </div>
             </h1>
             <a href="#" class="btn--edge btn--edge--bottom-right btn--edge--f-bw">
